<resources>
    <string name="app_name">onevone</string>
    <string name="contacts_page_name">音视频通话</string>
    <string name="search_bar_placehold">搜索用户ID</string>
    <string name="user_list_empty_tip">请搜索已注册的用户ID进行通话</string>
    <string name="video_calls">音视频通话</string>
    <string name="my_id">我的ID: %1$s</string>
    <string name="dial">呼叫</string>
    <string name="effect_none">无</string>
    <string name="seekbar_title">强度</string>
    <string name="beauty">美颜</string>
    <string name="reshape">美型</string>
    <string name="filter">滤镜</string>
    <string name="whitening">美白</string>
    <string name="smooth">磨皮</string>
    <string name="sharp">锐化</string>
    <string name="clear">清晰</string>
    <string name="big_eyes">大眼</string>
    <string name="thin_face">瘦脸</string>
    <string name="natural_face">自然脸</string>
    <string name="boy_face">男神</string>
    <string name="gril_face">女神</string>
    <string name="cut_face">窄脸</string>
    <string name="cheekbone">颧骨</string>
    <string name="jawbone">下颌</string>
    <string name="nose_wing">鼻翼</string>
    <string name="smiles_folds">法令纹</string>
    <string name="remove_pouch">黑眼圈</string>
    <string name="portrait">人像</string>
    <string name="lengbaipi">冷白皮</string>
    <string name="nature">自然</string>
    <string name="touliang">透亮</string>
    <string name="degula">德古拉</string>
    <string name="liangju">亮橘</string>
    <string name="naicha">奶茶</string>
    <string name="food">美食</string>
    <string name="qipaoshui">气泡水</string>
    <string name="landscape">风景</string>
    <string name="beihaidao">北海道</string>
    <string name="lvyan">绿妍</string>
    <string name="vintage">复古</string>
    <string name="meishijiaopian">美式胶片</string>
    <string name="cv_init_fail_1000">[%1$s]美颜SDK未集成</string>
    <string name="cv_init_fail_1002">[%1$s]集成的美颜SDK跟RTC不兼容</string>
    <string name="cv_init_fail_other">[%1$s]其他错误</string>
    <string name="rtc_video_init_fail">RTCVideo 初始化失败</string>
    <string name="reject_permission">用户拒绝了%1$s权限</string>
    <string name="video_call">视频呼叫</string>
    <string name="voice_call">音频呼叫</string>
    <string name="microphone">麦克风</string>
    <string name="earpiece">听筒</string>
    <string name="speaker">扬声器</string>
    <string name="camera">摄像头</string>
    <string name="camera_switch">翻转摄像头</string>
    <string name="dial_fail_because_biz">请求业务服务器失败: %1$s</string>
    <string name="dial_fail_because_rtc">调用RTC API 失败: %1$s</string>
    <string name="exec_fail_because_status">%1$s状态下不支持%2$s操作</string>
    <string name="callee_no_response">被叫方没有应答</string>
    <string name="calling_wait_accept">正在等待对方接听...</string>
    <string name="called_audio_wait_accept">对方邀请你语音通话...</string>
    <string name="called_video_wait_accept">对方邀请你视频通话...</string>
    <string name="on_the_call">已接通</string>
    <string name="closed_call">通话结束</string>
    <string name="call_timeout">对方无应答，已结束</string>
    <string name="local_user_close_mic">已静音</string>
    <string name="remote_user_close_mic">对方已关闭麦克风</string>
    <string name="remote_user_refuse">对方已拒绝</string>
    <string name="local_user_refuse">已拒绝</string>
    <string name="local_user_close_camera">已关闭摄像头</string>
    <string name="remote_user_close_camera">对方摄像头已关闭</string>
    <string name="opened_speaker">已开启扬声器</string>
    <string name="call_self_tip">不能邀请自己</string>
    <string name="argument_is_invalid">参数无效</string>
    <string name="search_uid_check_error">uid错误，请输入正确的十位Uid</string>
    <string name="float_window_status_calling">等待接听...</string>
    <string name="pip_permission_guide">请先到设置页面开启画中画权限</string>
    <string name="mic_permission_hint">请到设置授予麦克风权限进行通话</string>
    <string name="camera_permission_hint">请到设置授予摄像头权限</string>
    <string name="terminate_call_hint">当前正在%1$s通话中，确定退出通话？</string>
    <string name="video">视频</string>
    <string name="voice">语音</string>
    <string name="reset">重置</string>
    <string name="search">搜索</string>
    <string name="experiencing_duration_hint">本产品仅用于功能体验，单次通话时长不超过 20 分钟</string>
    <string name="local_network_poor_tip">当前通话您的网络较差</string>
    <string name="remote_network_poor_tip">当前通话对方网络较差</string>
    <string name="user_not_exist">不存在此用户</string>
    <string name="network_not_available_tip">当前网络不可用，无法通话，请检查你的网络设置</string>
    <string name="local_network_bad">当前通话您的网络较差</string>
    <string name="remote_network_bad">当前通话对方网络较差</string>
    <string name="secene_config_empty">场景配置信息为空</string>
    <string name="received_video_call">收到音视频通话呼叫</string>
    <string name="peer_is_busy">对方忙线中</string>
    <string name="pop_background_permission">请先到设置中打开后台弹出页面权限</string>

</resources>